Hemos pusto un div y adentro tiene un h1 y p

--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="estilos.css">
         <title>Vocabulary</title>
     </head>
     <body>
-        <h1>Hola mundo </h1>
+    <main>
+    <div class="Box-for-principal">
+        <h1>¡Bienvenido a Vocabulary!</h1>
+        <p>Aqui podras aprender un idioma</p>
+        <p>Nosotros te enseñaremos</p>
+    </div>
+    </main>
     </body>
 </html>
