Hemos puesto un p

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="Box-for-principal">
         <h1>¡Bienvenido a Vocabulary!</h1>
         <p>Aqui podras aprender un idioma</p>
-        <p>Nosotros te enseñaremos</p>
+        <p>Nosotros te enseñaremos a pronunciar tu idioma</p>
     </div>
     </main>
     </body>
