Hemos agregado una barra de menu con unos li con un a etc.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
         <p>Aqui podras aprender un idioma</p>
         <p>Nosotros te enseñaremos a pronunciar tu idioma</p>
     </div>
+
+    <header class="Box-for-menu">
+        <nav>
+            <ul class="Box-for-li">
+                <li><a href="">Mis palabras</a></li>
+                <li><a href="">Mis puntos</a></li>
+                <li><a href="">Tabla</a></li>
+            </ul>
+        </nav>
+    </header>
     </main>
     </body>
 </html>
