aumente el height y agregamos muchas cosas en el index

--- a/index.html
+++ b/index.html
@@ -25,7 +25,20 @@
                 </ul>
             </nav>
         </header>
-    </main>
+
+        <div class="">
+            <p>nosotros te enseñaremos a aprender</p>
+            <p>un idioma que te guste</p>
+            <p>Tu tendras, que poner tu palabra</p>
+            <p>en tu idioma y en la otra como se pronuncia en el.</p>
+            <p>en el idioma que pusiste</p>
+        </div>
+        
+        <div>
+            <p>Nunca pares de aprender</p>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTyh56VF3b0gWYKHnJ5KBvKhPxfPjQrAu6f4Q&usqp=CAU" alt="Mujer aprendiendo idioma">
+        </div>
+       </main>
 </body>
 
 </html>
