--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </nav>
         </header>
 
-        <div class="">
+        <div class="Box-for-information">
             <p>nosotros te enseñaremos a aprender</p>
             <p>un idioma que te guste</p>
             <p>Tu tendras, que poner tu palabra</p>
@@ -38,6 +38,12 @@
             <p>Nunca pares de aprender</p>
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTyh56VF3b0gWYKHnJ5KBvKhPxfPjQrAu6f4Q&usqp=CAU" alt="Mujer aprendiendo idioma">
         </div>
+
+
+
+
+
+        <button><a href="file:///C:/Users/Alejandro/Angel102009/Form-Vocabulary.html">Hacer mi cuenta</a></button>
        </main>
 </body>
 
